--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,4 @@ spring.datasource.password=franklin3083
 #jpa dto
 spring.jpa.database-platform = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.tem.use_jdbc_metadata_defaults = false
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
