Refactored my code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,11 @@
+logging.level.com.git=INFO
+logging.level.root=ERROR
+
+spring.datasource.hikari.connection-timeout=20000
+spring.datasource.hikari.maximum-pool-size=5
+
+logging.pattern.console=%-5level %logger{36} - %msg%n
+
 #database dto
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 spring.datasource.url = jdbc:postgresql://localhost:5432/web_service?createDatabaseIfNotExist=true
@@ -9,3 +17,4 @@ spring.datasource.password=franklin3083
 spring.jpa.database-platform = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.tem.use_jdbc_metadata_defaults = false
 spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
